# cmake_demo

./: CMakeLists.txt  README.md  main.cpp
